Base plugin on 'test suite' API